--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
-    "@prismicio/client": "^4.0.0",
+    "@prismicio/client": "^5.1.0",
     "date-fns": "^2.19.0",
     "next": "10.0.7",
-    "prismic-dom": "^2.2.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-icons": "^4.2.0",
+    "prismic-dom": "^2.2.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "4.2.0",
+    "react-toastify": "^8.0.3",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
